--- a/style_index.css
+++ b/style_index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap');
+
 body {
     margin: 0;
     color: white;
@@ -26,7 +28,7 @@ section {
     padding-top: 11rem;
 }
 
-.socials ul{
+.socials ul {
     width: fit-content;
     text-align: center;
     display: flex;
@@ -59,7 +61,7 @@ section {
     width: fit-content;
 }
 
-.white .bob{
+.white .bob {
     display: flex;
     background-color: #232323;
     border-radius: 50%;
@@ -69,23 +71,48 @@ section {
 
 }
 
-.bob p{
+.bob p {
     width: 8rem;
     color: #FFFFFF;
     padding-left: 1rem;
 }
 
-.white ul{
+.white ul {
     display: flex;
-    text-decoration: none;
     list-style: none;
     gap: 2rem;
-    font-size: 1.8rem;
-    background-image: linear-gradient(315deg, #bf3a30 0%, #864ba2 74%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
     padding-right: 9rem;
+    margin: 0%;
+
+}
+
+.white ul button {
+    font-size: 2rem;
+    border-radius: 2rem;
+    font-family: 'Libre Baskerville', serif;
+    font-weight: 700;
+    padding: 0.6rem 1rem;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+.about {
+    background-color: #42378f;
+    background-image: linear-gradient(315deg, #42378f 0%, #f53844 74%);
+    color: black;
+}
+
+.skeel {
+    background-color: white;
+    border-color: black;
+}
+
+.skeel:hover {
+    background-color: #130f40;
+    background-image: linear-gradient(315deg, #130f40 0%, #000000 74%);
+    color: white;
 }
 
 
