--- a/style_skill.css
+++ b/style_skill.css
@@ -9,6 +9,7 @@ body {
     font-family: 'Delicious Handrawn';
     background-color: #130f40;
     background-image: linear-gradient(315deg, #130f40 0%, #000000 74%);
+    padding-top: 0%;
 }
 
 body a {
@@ -19,14 +20,15 @@ body a {
     display: flex;
     flex-direction: column;
     height: 80vh;
-    width: 30vw;
+    width: 40vw;
     align-items: center;
     color: white;
     border-radius: 45%;
     padding: 3rem;
     background-color: #63d471;
     background-image: linear-gradient(315deg, #63d471 0%, #233329 74%);
-
+    margin-top: 0rem;
+    padding-top: 0%;
 }
 
 .daddy h1 {
@@ -34,24 +36,48 @@ body a {
     margin-top: 0rem;
 }
 
-.daddy .skills {
-    font-size: 1.5rem;
+.skill-bar {
+    margin: 20px;
     align-self: flex-start;
-    width: 20rem;
-}
-
-.skills p {
-    color: white;
-}
-
-.back {
-    background: none !important;
-}
-
-.skill {
-    background: linear-gradient(90deg, #81EBF5 0%, #31B1CF 100%);
-    text-align: right;
-    padding-right: 20px;
+    width: 25rem;
+    padding-left: 1rem;
+  }
+  
+  .bar {
+    width: 100%;
+    height: 30px;
+    background-color: #ddd;
+    border-radius: 25px;
+  }
+  
+  .progress {
+    width: 0%;
+    height: 30px;
+    background-color: #4CAF50;
+    border-radius: 25px;
+    transition: width 2s;
+    text-align: center;
     line-height: 30px;
-    border-radius: 0 20px 20px 0;
-}
+    color: white;
+  }
+  
+  
+  .html.animate {
+    width: 80%;
+  }
+  
+  .css.animate {
+    width: 60%;
+  }
+  
+  .js.animate {
+    width: 50%;
+  }
+
+  .svg.animate {
+    width: 20%;
+  }
+  
+  .skill-bar p {
+    margin-top: 10px;
+  }
