--- a/style_about.css
+++ b/style_about.css
@@ -4,6 +4,7 @@
       display: flex;
       height: 100vh;
       align-items: center;
+      justify-content: center;
       justify-content: space-between;
       font-family: 'Delicious Handrawn';
       background-color: #42378f;
@@ -32,6 +33,8 @@
     margin-top: 0%;
     padding-top: 0%;
     align-self: center;
+    position: absolute;
+    /*padding-left: 19rem;*/
   }
   .daddy h1 {
       font-size: 3rem;
@@ -53,4 +56,8 @@
   .small{
     
     
+  }
+
+  .daddy:nth-child(2){
+    filter: blur(50px);
   }
